src/styles/global.module.scss
@import './mixins';

/* default styles for text */
html {
  --background-content: #fafafa;
  --shadow-content: #385f663e;
  --color-base: #19282b;
  --color-subtitle: #656565;
  --color-strong: #303030;

  background-color: var(--background-content);
  word-spacing: 105%;
}

html:global(.dark-theme) {
  --background-content: #353535;
  /* dark shadow on dark background? Don't bother.. */
  --shadow-content: transparent;
  --color-base: #f8fafb;
  --color-subtitle: #b3b3b3;
  --color-strong: #00aeca;

  /* some images have black lines on transparent backgrounds, */
  /* we need something with good contrast, but still dark */
  --background-image-dark: #d4d4d4;

  background-color: #262626;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

*:focus-visible {
  outline: 4px dashed var(--color-focus) !important;
  outline-offset: 5px;
  border-radius: 5px;
}

@media (prefers-reduced-motion: no-preference) {
  *:focus-visible {
    animation: focus-slide-in var(--color-focus);
  }
}

@keyframes focus-slide-in {
  from {
    outline-offset: 10px;
  }
  to {
    outline-offset: 3px;
  }
}

body {
  position: relative;
  overflow-x: hidden;
  color: var(--color-base);
  line-height: var(--line-height-base);
  font-family: var(--font-base);
  font-weight: var(--font-weight-normal);
  font-size: var(--font-size-base);
}

h1 {
  margin: 0;
  word-spacing: normal;
  font-size: var(--font-size-h1);
  line-height: var(--line-height-heading);
  font-weight: var(--font-weight-bold);
  font-family: var(--font-heading);
}

h2,
h3,
h4,
h5,
h6 {
  margin: 0 0 0.75em;
  line-height: var(--line-height-heading);
  font-weight: var(--font-weight-bold);
  font-family: var(--font-heading);
  word-spacing: normal;
}

h2 {
  font-size: var(--font-size-h2);
}
h3 {
  font-size: var(--font-size-h3);
}
h4 {
  font-size: var(--font-size-h4);
}
h5 {
  font-size: var(--font-size-h5);
}
h6 {
  font-size: var(--font-size-h6);
}

p {
  margin: 0 0 1em;
}

a {
  @extend %link-reset;
  color: var(--color-base);
}

::-moz-selection {
  background: var(--color-selection);
}
::selection {
  background: var(--color-selection);
}

